--- a/Airbnb_project.ipynb
+++ b/Airbnb_project.ipynb
@@ -8,35 +8,17 @@
       "collapsed_sections": [
         "vncDsAP0Gaoa",
         "FJNUwmbgGyua",
-        "w6K7xa23Elo4",
         "yQaldy8SH6Dl",
         "PH-0ReGfmX4f",
         "mDgbUHAGgjLW",
-        "O_i_v8NEhb9l",
-        "HhfV-JJviCcP",
-        "Y3lxredqlCYt",
-        "3RnN4peoiCZX",
         "x71ZqKXriCWQ",
         "7hBIi_osiCS2",
-        "JlHwYmJAmNHm",
         "35m5QtbWiB9F",
         "PoPl-ycgm1ru",
-        "H0kj-8xxnORC",
         "nA9Y7ga8ng1Z",
-        "PBTbrJXOngz2",
-        "u3PMJOP6ngxN",
         "dauF4eBmngu3",
-        "bKJF3rekwFvQ",
-        "MSa1f5Uengrz",
-        "GF8Ens_Soomf",
         "0wOQAZs5pc--",
-        "K5QZ13OEpz2H",
-        "lQ7QKXXCp7Bj",
-        "448CDAPjqfQr",
         "KSlN3yHqYklG",
-        "t6dVpIINYklI",
-        "ijmpgYnKYklI",
-        "-JiQyfWJYklI",
         "EM7whBJCYoAo",
         "fge-S5ZAYoAp",
         "85gYPyotYoAp",
@@ -84,11 +66,11 @@
         "NC_X3p0fY2L0",
         "UV0SzAkaZNRQ",
         "YPEH6qLeZNRQ",
-        "q29F0dvdveiT",
         "EXh0U9oCveiU",
         "22aHeOlLveiV",
         "JcMwzZxoAimU",
         "8G2x9gOozGDZ",
+        "H0kj-8xxnORC",
         "gCX9965dhzqZ",
         "gIfDvo9L0UH2"
       ],
@@ -1279,12 +1261,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 9 visualization code\n",
-        "corr = air.corr(method='kendall')\n",
-        "plt.figure(figsize=(13,10))\n",
-        "plt.title(\"Correlation Between Different Variables\\n\")\n",
-        "sns.heatmap(corr, annot=True)\n",
-        "plt.show()"
+        "# Chart - 9 visualization code\n"
       ],
       "metadata": {
         "id": "B2aS4O1ophqO"
@@ -1659,7 +1636,12 @@
     {
       "cell_type": "code",
       "source": [
-        "# Correlation Heatmap visualization code"
+        "# Correlation Heatmap visualization code\n",
+        "corr = air.corr(method='kendall')\n",
+        "plt.figure(figsize=(13,10))\n",
+        "plt.title(\"Correlation Between Different Variables\\n\")\n",
+        "sns.heatmap(corr, annot=True)\n",
+        "plt.show()"
       ],
       "metadata": {
         "id": "xyC9zolEZNRQ"
@@ -1715,7 +1697,9 @@
     {
       "cell_type": "code",
       "source": [
-        "# Pair Plot visualization code"
+        "# Pair Plot visualization code\n",
+        "sns.pairplot(air)\n",
+        "plt.show()"
       ],
       "metadata": {
         "id": "o58-TEIhveiU"
