--- a/Airbnb_project.ipynb
+++ b/Airbnb_project.ipynb
@@ -17,13 +17,9 @@
         "PoPl-ycgm1ru",
         "nA9Y7ga8ng1Z",
         "dauF4eBmngu3",
-        "0wOQAZs5pc--",
-        "KSlN3yHqYklG",
-        "EM7whBJCYoAo",
         "fge-S5ZAYoAp",
         "85gYPyotYoAp",
         "RoGjAbkUYoAp",
-        "4Of9eVA-YrdM",
         "iky9q4vBYrdO",
         "F6T5p64dYrdO",
         "y-Ehk30pYrdP",
@@ -31,7 +27,6 @@
         "QHF8YVU7Yuh3",
         "GwzvFGzlYuh3",
         "qYpmQ266Yuh3",
-        "OH-pJp9IphqM",
         "bbFf2-_FphqN",
         "_ouA3fa0phqN",
         "Seke61FWphqN",
@@ -39,15 +34,12 @@
         "t27r6nlMphqO",
         "r2jJGEOYphqO",
         "b0JNsNcRphqO",
-        "BZR9WyysphqO",
         "jj7wYXLtphqO",
         "eZrbJ2SmphqO",
         "rFu4xreNphqO",
-        "YJ55k-q6phqO",
         "gCFgpxoyphqP",
         "OVtJsKN_phqQ",
         "lssrdh5qphqQ",
-        "U2RJ9gkRphqQ",
         "1M8mcRywphqQ",
         "tgIPom80phqQ",
         "JMzcOPDDphqR",
@@ -63,16 +55,13 @@
         "E6MkPsBcp1cl",
         "2cELzS2fp1cl",
         "3MPXvC8up1cl",
-        "NC_X3p0fY2L0",
         "UV0SzAkaZNRQ",
         "YPEH6qLeZNRQ",
         "EXh0U9oCveiU",
         "22aHeOlLveiV",
         "JcMwzZxoAimU",
         "8G2x9gOozGDZ",
-        "H0kj-8xxnORC",
-        "gCX9965dhzqZ",
-        "gIfDvo9L0UH2"
+        "H0kj-8xxnORC"
       ],
       "include_colab_link": true
     },
@@ -98,7 +87,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Project Name**    -\n",
+        "# **Project Name**   \n",
+        "\n",
+        "Exploratory data analysis  on Airbnb -\n",
         "\n"
       ],
       "metadata": {
@@ -108,7 +99,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##### **Project Type**    - EDA Airbnb\n",
+        "##### **Project Type**    - EDA\n",
         "##### **Contribution**    - Individual\n",
         "##### **Created BY-**     Ankit chauhan\n"
       ],
@@ -128,7 +119,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Airbnb  is an online marketplace that connects people who want to rent out their homes with people looking for accommodations in specific locales. The company has come a long way since 2007, when its co-founders first came up with the idea to invite paying guests to sleep on an air mattress in their living room....   This dataset has around 49,000 observations in it with 16 columns and it is a mix of categorical and numeric values"
+        "**Analysis or Airbnb DATA set**\n",
+        "Airbnb  is an online marketplace that connects people who want to rent out their homes with people looking for accommodations in specific locales. The company has come a long way since 2007, when its co-founders first came up with the idea to invite paying guests to sleep on an air mattress in their living room....   This dataset has around 49,000 observations in it with 16 columns and it is a mix of categorical and numeric values.\n",
+        "the main goal of the analysis this data set is to improve the bussiness model and easily acess  this type of models in other places of word most of people like to travel . and most of the travelers find out that accomodation is the major problem during trips. and thats why i Take up this project to find out some insight how can people save there money through those platform .\n",
+        "and from this data i find out that  listing is not equally distributed around the area and even people prefer staying at some common location like brooklyn and manhatten"
       ],
       "metadata": {
         "id": "F6v_1wHtG2nS"
@@ -146,7 +140,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Provide your GitHub Link here."
+        "Provide your GitHub Link here. https://github.com/ankit-chuahan/Air_bnb_project/blob/main/Airbnb_project.ipynb"
       ],
       "metadata": {
         "id": "h1o69JH3Eqqn"
@@ -297,7 +291,7 @@
       "cell_type": "code",
       "source": [
         "# Loading Dataset\n",
-        "air = pd.read_csv(\"Airbnb NYC 2019.csv\")"
+        "air = pd.read_csv(\"Airbnb NYC 2019.csv\",encoding='unicode escape')"
       ],
       "metadata": {
         "id": "4CkvbW_SlZ_R"
@@ -1178,7 +1172,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 8 visualization code\n",
+        "# Chart - 8 Host with multiple listing\n",
         "host_name =air[\"host_name\"].value_counts()\n",
         "plt.figure(figsize=(20,8))\n",
         "new=host_name[:20].plot(kind=\"bar\")\n",
@@ -1261,7 +1255,11 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 9 visualization code\n"
+        "# Chart - FRequancy of the listing name\n",
+        "plt.figure(figsize=(20,8))\n",
+        "plt.ylim(4,20)\n",
+        "name_ = air[\"name\"].value_counts()\n",
+        "new=name_[:30].plot(kind=\"bar\",color=\"m\")"
       ],
       "metadata": {
         "id": "B2aS4O1ophqO"
@@ -1336,7 +1334,12 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 10 visualization code"
+        "# Chart - 10 visualization code\n",
+        "plt.figure(figsize=(14,7))\n",
+        "neww = air.groupby([\"name\",\"location\"],as_index=False)[[\"price\"]].max().sort_values(\"price\",ascending=False)[:20]\n",
+        "sns.barplot(x=\"name\",y=\"price\" ,hue=\"location\",data=neww)\n",
+        "plt.xticks(rotation=90)\n",
+        "plt.show()"
       ],
       "metadata": {
         "id": "GM7a4YP4phqQ"
@@ -1411,7 +1414,13 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 11 visualization code"
+        "# Chart - 11 visualization code\n",
+        "room_type_counts = air['room_type'].value_counts()\n",
+        "room_type_counts\n",
+        "ex= [0,0,0.6,]\n",
+        "plt.pie(room_type_counts, labels=room_type_counts.index, autopct='%1.1f%%',explode=ex )\n",
+        "plt.title('Distribution of Room Types')\n",
+        "plt.show()"
       ],
       "metadata": {
         "id": "mAQTIvtqp1cj"
@@ -1486,7 +1495,10 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 12 visualization code"
+        "# Chart - 12 visualization code\n",
+        "average_price_per_host = air.groupby('host_id')['price'].sum()\n",
+        "avg=average_price_per_host.sort_values(ascending=False).round(2)\n",
+        "average_price_per_host"
       ],
       "metadata": {
         "id": "bwevp1tKp1ck"
@@ -1561,7 +1573,13 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 13 visualization code"
+        "# Chart - 13 visualization code\n",
+        "host_id__ = air.groupby(['host_id'], as_index=False)['minimum_nights'].max().sort_values(by='minimum_nights', ascending=False).head(50)\n",
+        "plt.figure(figsize=(14,7))\n",
+        "plt.xticks(rotation=90)\n",
+        "sns.barplot(data = host_id__, x = 'host_id',y= 'minimum_nights')\n",
+        "plt.show()\n",
+        "\n"
       ],
       "metadata": {
         "id": "EUfxeq9-p1cl"
@@ -1637,10 +1655,11 @@
       "cell_type": "code",
       "source": [
         "# Correlation Heatmap visualization code\n",
-        "corr = air.corr(method='kendall')\n",
+        "corr = air.corr(method='spearman',)\n",
         "plt.figure(figsize=(13,10))\n",
         "plt.title(\"Correlation Between Different Variables\\n\")\n",
-        "sns.heatmap(corr, annot=True)\n",
+        "cmap=\"Blues\"\n",
+        "sns.heatmap(corr, annot=True,cmap=cmap)\n",
         "plt.show()"
       ],
       "metadata": {
@@ -1698,7 +1717,7 @@
       "cell_type": "code",
       "source": [
         "# Pair Plot visualization code\n",
-        "sns.pairplot(air)\n",
+        "sns.pairplot(air ,vars=[\"longitude\" ,\"price\",'latitude'],hue=\"room_type\",kind=\"reg\")\n",
         "plt.show()"
       ],
       "metadata": {
@@ -1815,6 +1834,72 @@
       "metadata": {
         "id": "gIfDvo9L0UH2"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sns.scatterplot(x='calculated_host_listings_count', y='price', data=air, alpha=0.5)"
+      ],
+      "metadata": {
+        "id": "8Z2Axpo9bUL0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sns.scatterplot(x='calculated_host_listings_count', y='number_of_reviews', data=air, alpha=0.5)"
+      ],
+      "metadata": {
+        "id": "ScD1dpztbhH0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(figsize=(10, 6))\n",
+        "sns.histplot(data=air, x='price', bins=30, kde=True)\n",
+        "plt.title('Price Distribution')\n",
+        "plt.xlabel('Price')\n",
+        "plt.ylabel('Frequency')\n",
+        "plt.show()\n"
+      ],
+      "metadata": {
+        "id": "2-zYU7Dgcd1M"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# listing name and value\n",
+        "# name_ = air[\"name\"].value_counts()\n",
+        "# new=name_[:20].plot(kind=\"bar\",color=\"m\")"
+      ],
+      "metadata": {
+        "id": "BrkIHzlDgZVQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "room_type_stats = air.groupby(['room_type',\"location\"]).agg({'price': ['mean', 'max', ],\"availability_365\": ['mean', 'max', ]})\n",
+        "corr = room_type_stats.corr(method='kendall')\n",
+        "room_type_stats =room_type_stats.round(2)\n",
+        "room_type_stats\n",
+        "sns.heatmap(corr, annot=True)"
+      ],
+      "metadata": {
+        "id": "XA8kQzfPgs_4"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
