--- a/Copy_of_Airbnb_project.ipynb
+++ b/Copy_of_Airbnb_project.ipynb
@@ -32,20 +32,15 @@
         "t27r6nlMphqO",
         "r2jJGEOYphqO",
         "b0JNsNcRphqO",
+        "BZR9WyysphqO",
         "jj7wYXLtphqO",
-        "eZrbJ2SmphqO",
-        "rFu4xreNphqO",
+        "lssrdh5qphqQ",
         "1M8mcRywphqQ",
         "tgIPom80phqQ",
         "JMzcOPDDphqR",
-        "X_VqEhTip1ck",
-        "8zGJKyg5p1ck",
-        "PVzmfK_Ep1ck",
-        "n3dbpmDWp1ck",
         "ylSl6qgtp1ck",
         "ZWILFDl5p1ck",
         "M7G43BXep1ck",
-        "Ag9LCva-p1cl",
         "E6MkPsBcp1cl",
         "2cELzS2fp1cl",
         "3MPXvC8up1cl",
@@ -1026,11 +1021,12 @@
     {
       "cell_type": "code",
       "source": [
-        "# Effect of prices to per night\n",
+        "# host with minimum night\n",
         "\n",
-        "price_review = air[['minimum_nights', 'price']].sort_values(by= 'price')\n",
-        "\n",
-        "price_review.plot(x = 'price', y = 'minimum_nights',  kind = 'area', title = 'minimum_nights vs Price', xlim=0,ylim=0)\n",
+        "host_id__ = air.groupby(['host_id'], as_index=False)['minimum_nights'].max().sort_values(by='minimum_nights', ascending=False).head(50)\n",
+        "plt.figure(figsize=(14,7))\n",
+        "plt.xticks(rotation=90)\n",
+        "sns.barplot(data = host_id__, x = 'host_id',y= 'minimum_nights')\n",
         "plt.show()"
       ],
       "metadata": {
@@ -1254,8 +1250,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**As the count of michel and david is more then other hosts that means they are cruicial for the smooth working of listing in simple a host with a higher count\n",
-        " signal that he is important for an organisation**"
+        "**As the count of michel and david is more then other hosts that means the More listings from a single host can offer travelers a wider variety of accommodation options. This can attract different types of guests with varying preferences and budgets.Guests who are satisfied with one listing from a host may be more inclined to book another listing from the same host if they return to the area**"
       ],
       "metadata": {
         "id": "ey_0qi68phqO"
@@ -1276,7 +1271,7 @@
         "plt.figure(figsize=(15, 8))\n",
         "plt.subplot(2, 3, 1)\n",
         "manhat=air[air[\"location\"]==\"Manhattan\"][\"host_name\"].value_counts().head(5)\n",
-        "manhat.plot(kind=\"bar\")\n",
+        "manhat.plot(kind=\"bar\",color=\"m\")\n",
         "plt.title(\"Manhattan\")\n",
         "\n",
         "\n",
@@ -1289,7 +1284,7 @@
         "\n",
         "plt.subplot(2, 3, 3)\n",
         "queen =air[air[\"location\"]==\"Queens\"][\"host_name\"].value_counts().head(6)\n",
-        "queen.plot(kind=\"bar\")\n",
+        "queen.plot(kind=\"bar\",color=\"m\")\n",
         "plt.title(\"Queens\")\n",
         "\n",
         "plt.subplot(2, 3, 4)\n",
@@ -1299,7 +1294,7 @@
         "\n",
         "plt.subplot(2, 3, 5)\n",
         "bronx = air[air[\"location\"]==\"Bronx\"][\"host_name\"].value_counts().head(6)\n",
-        "bronx.plot(kind=\"bar\")\n",
+        "bronx.plot(kind=\"bar\",color=\"m\")\n",
         "plt.title(\"Bronx\")\n",
         "\n",
         "plt.tight_layout()\n",
@@ -1317,25 +1312,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##### 1. Why did you pick the specific chart?"
-      ],
-      "metadata": {
-        "id": "gCFgpxoyphqP"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "TVxDimi2phqP"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### 2. What is/are the insight(s) found from the chart?"
+        "##### 1. What is/are the insight(s) found from the chart?"
       ],
       "metadata": {
         "id": "OVtJsKN_phqQ"
@@ -1353,7 +1330,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##### 3. Will the gained insights help creating a positive business impact?\n",
+        "##### 2. Will the gained insights help creating a positive business impact?\n",
         "Are there any insights that lead to negative growth? Justify with specific reason."
       ],
       "metadata": {
@@ -1381,12 +1358,18 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 10 visualization code\n",
-        "plt.figure(figsize=(14,7))\n",
-        "neww = air.groupby([\"name\",\"location\"],as_index=False)[[\"price\"]].max().sort_values(\"price\",ascending=False)[:20]\n",
-        "sns.barplot(x=\"name\",y=\"price\" ,hue=\"location\",data=neww)\n",
-        "plt.xticks(rotation=90)\n",
-        "plt.show()"
+        "# Chart - Host and review comparison\n",
+        "plt.figure(figsize=(16,6))\n",
+        "manhat=air.groupby(\"host_name\")[\"number_of_reviews\"].sum().sort_values(ascending=False)\n",
+        "manhat[:15].plot(kind=\"bar\",color =\"cyan\" ,)\n",
+        "plt.show()\n",
+        "\n",
+        "\n",
+        "# plt.figure(figsize=(14,7))\n",
+        "# neww = air.groupby([\"name\",\"location\"],as_index=False)[[\"price\"]].max().sort_values(\"price\",ascending=False)[:20]\n",
+        "# sns.barplot(x=\"name\",y=\"price\" ,hue=\"location\",data=neww)\n",
+        "# plt.xticks(rotation=90)\n",
+        "# plt.show()"
       ],
       "metadata": {
         "id": "GM7a4YP4phqQ"
@@ -1406,7 +1389,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "**To compare things between differnet host soo its best suited**"
       ],
       "metadata": {
         "id": "8agQvks0phqQ"
@@ -1424,7 +1407,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "**From this we can see that  Michael and david gets reviews frequently then any others. The frequency of reviews can also indicate the customer's level of satisfaction or dissatisfaction**"
       ],
       "metadata": {
         "id": "Qp13pnNzphqQ"
@@ -1443,7 +1426,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "**Reviews are one of the most important thing for any organisation to work because with the help of the reviews host knows that what costomers are expecting from the host and his team .  with the help of this host can also make decisons for future outlook..leaving reviews to share their experiences, help in the growth of the business.**"
       ],
       "metadata": {
         "id": "R4Ka1PC2phqR"
@@ -1461,13 +1444,16 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 11 visualization code\n",
-        "room_type_counts = air['room_type'].value_counts()\n",
-        "room_type_counts\n",
-        "ex= [0,0,0.6,]\n",
-        "plt.pie(room_type_counts, labels=room_type_counts.index, autopct='%1.1f%%',explode=ex )\n",
-        "plt.title('Distribution of Room Types')\n",
-        "plt.show()"
+        "# Chart  location to number of reviews\n",
+        "\n",
+        "final = air.groupby(\"location\",as_index=False)[['reviews_per_month']].max()\n",
+        "ex = [0,0,0.1,0,0]\n",
+        "color = ['#ff9999','#66b3ff','#99ff99','#ffcc99',\"#CE82FC\"]\n",
+        "plt.pie(final['reviews_per_month'], labels=final['location'],autopct='%1.1f%%',explode=ex,colors=color,shadow=True)\n",
+        "plt.show()\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "mAQTIvtqp1cj"
@@ -1487,7 +1473,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "**As i wanna show the relative proportion of which location getting most reviews in amonth soo thats why i choose that chart**"
       ],
       "metadata": {
         "id": "-vsMzt_np1ck"
@@ -1505,7 +1491,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "**From the above chart we can clearly see that more then 50% of total review in a monthy is about the manhattan soo that means customers engagement in manhattam is more then any other location**"
       ],
       "metadata": {
         "id": "ZYdMsrqVp1ck"
@@ -1524,7 +1510,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "**More reviews can signal higher demand for accommodations in that location Hosts in the location with more reviews may have a competitive advantage. They can potentially charge higher prices due to the high demand and positive reputation associated with the location**"
       ],
       "metadata": {
         "id": "druuKYZpp1ck"
@@ -1542,19 +1528,12 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 12 visualization code\n",
-        "\n",
-        "# Chart - FRequancy of the listing name\n",
+        "# FRequancy of the listing name\n",
         "plt.figure(figsize=(20,8))\n",
         "plt.ylim(4,20)\n",
         "name_ = air[\"name\"].value_counts()\n",
         "new=name_[:30].plot(kind=\"bar\",color=\"m\")\n",
-        "\n",
-        "\n",
-        "\n",
-        "average_price_per_host = air.groupby('host_id')['price'].sum()\n",
-        "avg=average_price_per_host.sort_values(ascending=False).round(2)\n",
-        "average_price_per_host"
+        "plt.show()"
       ],
       "metadata": {
         "id": "bwevp1tKp1ck"
@@ -1565,25 +1544,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##### 1. Why did you pick the specific chart?"
-      ],
-      "metadata": {
-        "id": "ylSl6qgtp1ck"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "m2xqNkiQp1ck"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### 2. What is/are the insight(s) found from the chart?"
+        "##### 1. What is/are the insight(s) found from the chart?"
       ],
       "metadata": {
         "id": "ZWILFDl5p1ck"
@@ -1592,7 +1553,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "**From the above data we can clearly identify that which which listing  has most branches all over the place**"
       ],
       "metadata": {
         "id": "x-lUsV2mp1ck"
@@ -1601,7 +1562,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##### 3. Will the gained insights help creating a positive business impact?\n",
+        "##### 2. Will the gained insights help creating a positive business impact?\n",
         "Are there any insights that lead to negative growth? Justify with specific reason."
       ],
       "metadata": {
@@ -1611,7 +1572,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "**A successful business with multiple branches can build a loyal customer base. Customers who have had positive experiences at one location are more likely to visit other branches with the same name, especially if they trust the brand**"
       ],
       "metadata": {
         "id": "5wwDJXsLp1cl"
@@ -1629,12 +1590,19 @@
     {
       "cell_type": "code",
       "source": [
-        "# Chart - 13 visualization code\n",
-        "host_id__ = air.groupby(['host_id'], as_index=False)['minimum_nights'].max().sort_values(by='minimum_nights', ascending=False).head(50)\n",
-        "plt.figure(figsize=(14,7))\n",
-        "plt.xticks(rotation=90)\n",
-        "sns.barplot(data = host_id__, x = 'host_id',y= 'minimum_nights')\n",
+        "# Distribution of price of top 100 listing by names\n",
+        "\n",
+        "x=air.groupby(\"name\",as_index=False)[[\"price\"]].max().sort_values(\"price\",ascending=False).head(200)\n",
+        "\n",
+        "\n",
+        "plt.figure(figsize=(10, 8))\n",
+        "plt.hist(x[\"price\"], bins=20, edgecolor='k',)\n",
+        "plt.xlabel(\"price\")\n",
+        "plt.ylabel(\"Frequency\")\n",
+        "plt.title(\"price distribution of top 300 listing\")\n",
+        "plt.grid()\n",
         "plt.show()\n",
+        "\n",
         "\n"
       ],
       "metadata": {
@@ -1646,25 +1614,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##### 1. Why did you pick the specific chart?"
-      ],
-      "metadata": {
-        "id": "E6MkPsBcp1cl"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "V22bRsFWp1cl"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### 2. What is/are the insight(s) found from the chart?"
+        "##### 1. What is/are the insight(s) found from the chart?"
       ],
       "metadata": {
         "id": "2cELzS2fp1cl"
@@ -1673,29 +1623,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "**From the above chart we can see the distribution of the price as most of the people prefer the listing below 3000 and frequancy of the price below 2000 is more then overall**"
       ],
       "metadata": {
         "id": "ozQPc2_Ip1cl"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### 3. Will the gained insights help creating a positive business impact?\n",
-        "Are there any insights that lead to negative growth? Justify with specific reason."
-      ],
-      "metadata": {
-        "id": "3MPXvC8up1cl"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here"
-      ],
-      "metadata": {
-        "id": "GL8l1tdLp1cl"
       }
     },
     {
@@ -1723,100 +1654,6 @@
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### 1. Why did you pick the specific chart?"
-      ],
-      "metadata": {
-        "id": "UV0SzAkaZNRQ"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "DVPuT8LYZNRQ"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### 2. What is/are the insight(s) found from the chart?"
-      ],
-      "metadata": {
-        "id": "YPEH6qLeZNRQ"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here"
-      ],
-      "metadata": {
-        "id": "bfSqtnDqZNRR"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#### Chart - 15 - Pair Plot"
-      ],
-      "metadata": {
-        "id": "q29F0dvdveiT"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Pair Plot visualization code\n",
-        "sns.pairplot(air ,vars=[\"longitude\" ,\"price\",'latitude'],hue=\"room_type\",kind=\"reg\")\n",
-        "plt.show()"
-      ],
-      "metadata": {
-        "id": "o58-TEIhveiU"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### 1. Why did you pick the specific chart?"
-      ],
-      "metadata": {
-        "id": "EXh0U9oCveiU"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here."
-      ],
-      "metadata": {
-        "id": "eMmPjTByveiU"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##### 2. What is/are the insight(s) found from the chart?"
-      ],
-      "metadata": {
-        "id": "22aHeOlLveiV"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Answer Here"
-      ],
-      "metadata": {
-        "id": "uPQ8RGwHveiV"
-      }
     },
     {
       "cell_type": "markdown",
@@ -1890,158 +1727,6 @@
       "metadata": {
         "id": "gIfDvo9L0UH2"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "sns.scatterplot(x='calculated_host_listings_count', y='price', data=air, alpha=0.5)"
-      ],
-      "metadata": {
-        "id": "8Z2Axpo9bUL0"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "sns.scatterplot(x='calculated_host_listings_count', y='number_of_reviews', data=air, alpha=0.5)"
-      ],
-      "metadata": {
-        "id": "ScD1dpztbhH0"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "plt.figure(figsize=(10, 6))\n",
-        "sns.histplot(data=air, x='price', bins=10, kde=True)\n",
-        "plt.title('Price Distribution')\n",
-        "plt.xlabel('Price')\n",
-        "plt.ylabel('Frequency')\n",
-        "plt.show()\n"
-      ],
-      "metadata": {
-        "id": "2-zYU7Dgcd1M"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# listing name and value\n",
-        "# name_ = air[\"name\"].value_counts()\n",
-        "# new=name_[:20].plot(kind=\"bar\",color=\"m\")"
-      ],
-      "metadata": {
-        "id": "BrkIHzlDgZVQ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "room_type_stats = air.groupby(['room_type',\"location\"]).agg({'price': ['mean', 'max', ],\"availability_365\": ['mean', 'max', ]})\n",
-        "corr = room_type_stats.corr(method='kendall')\n",
-        "room_type_stats =room_type_stats.round(2)\n",
-        "room_type_stats\n",
-        "sns.heatmap(corr, annot=True)"
-      ],
-      "metadata": {
-        "id": "XA8kQzfPgs_4"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "air.columns"
-      ],
-      "metadata": {
-        "id": "DIg0Hya0BP4e"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "manhat=air[air[\"location\"]==\"Manhattan\"][\"host_name\"].value_counts().head(10)\n",
-        "brook =air[air[\"location\"]==\"Brooklyn\"][\"host_name\"].value_counts().head(10)\n",
-        "queen =air[air[\"location\"]==\"Queens\"][\"host_name\"].value_counts().head(10)\n",
-        "staten = air[air[\"location\"]==\"Staten Island\"][\"host_name\"].value_counts().head(10)\n",
-        "bronx = air[air[\"location\"]==\"Bronx\"][\"host_name\"].value_counts().head(10)"
-      ],
-      "metadata": {
-        "id": "jyNeyvS7BRjx"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "air[\"location\"].unique()"
-      ],
-      "metadata": {
-        "id": "BO6Vz-ZbC2JR"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "sns.scatterplot(x=\"\")"
-      ],
-      "metadata": {
-        "id": "Y3dFvwlFwdtb"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "air.columns"
-      ],
-      "metadata": {
-        "id": "5nUfAzN3wqKI"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "sns.scatterplot(air[\"latitude\"],air[\"longitude\"],hue=\"location\" ,data=air)"
-      ],
-      "metadata": {
-        "id": "2PWSX1WMwrjn"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "\n",
-        "\n",
-        "# Assuming you have a DataFrame named \"air\" with \"latitude,\" \"longitude,\" and \"location\" columns\n",
-        "\n",
-        "# Create a scatter plot with hue-based coloring\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "z9dJnNqEzxsG"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
